🚚  "aws_robomaker_hospital_world" -> "d_hospital_world"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(aws_robomaker_hospital_world)
+project(d_hospital_world)
 
 find_package(catkin REQUIRED COMPONENTS
   gazebo_ros
